uploading final dataset

--- a/Code/Annotations_aggregation.ipynb
+++ b/Code/Annotations_aggregation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "667d7ec7-96a6-429a-963e-663593961500",
    "metadata": {},
    "outputs": [],
@@ -29,12 +29,15 @@
     "ger = pd.read_csv('../Data/Data_Annotated/latest_ger_annotations.csv', sep = '\\t')\n",
     "juanjo_final = pd.read_csv('../Data/Data_Annotated/final_juanjo_annotations.csv', sep = '\\t')\n",
     "juanma_final = pd.read_csv('../Data/Data_Annotated/final_juanma_annotations.csv', sep = '\\t')\n",
-    "ger_final = pd.read_csv('../Data/Data_Annotated/final_ger_annotations.csv', sep = '\\t')"
+    "ger_final = pd.read_csv('../Data/Data_Annotated/final_ger_annotations.csv', sep = '\\t')\n",
+    "juanjo = juanjo.append(juanjo_final)\n",
+    "juanma = juanma.append(juanma_final)\n",
+    "ger = ger.append(ger_final)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "48f60347-b832-479a-8d68-ce44146ead6b",
    "metadata": {},
    "outputs": [],
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "c890b074-c201-4695-9f3b-b148fc204f38",
    "metadata": {},
    "outputs": [],
@@ -58,200 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "66fc4537-571c-4216-aace-df727364b9f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>tweet_id</th>\n",
-       "      <th>sentiment_juanjo</th>\n",
-       "      <th>sentiment_juanma</th>\n",
-       "      <th>sentiment_ger</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>#NosUnimosONosJodemos #NosUnimosONosJodemos  Vamos juntos por el cambio, mire el miedo que le tienen.  @petrogustavo Mi presidente</td>\n",
-       "      <td>1528216296147533824</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>Admiración</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>@tobonsanin Otra vez este viejo estúpido politiquero, estamos es llevados cuando creemos  viejo decrépito de estos va hacer la solución para Colombia, ayudando a escoger corruptos como #quintero en MEDELLIN #PetroElPatronDelMal #Federic...</td>\n",
-       "      <td>1528425111078019072</td>\n",
-       "      <td>{\"choices\": [\"Ira\", \"Asco\"]}</td>\n",
-       "      <td>Asco</td>\n",
-       "      <td>{\"choices\": [\"Ira\", \"Asco\", \"Desagrado\"]}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Sin importar encuestas como en el plebiscito juntos por Colombia el 29 nos vemos #FedericoImparable #NosUnimosONosJodemos #FedericoEsColombia</td>\n",
-       "      <td>1528451337087762433</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>@FranciaMarquezM Ahora q es a ud si le parece grave? Y cuando sus borregos de la primera linea lo hacian contra nuestros policias q? Chevere cuando es para otros pero grave cuando es hacia mi? 🤥 #PetroElPatronDelMal #NosUnimosONosJodemos</td>\n",
-       "      <td>1528454891634663428</td>\n",
-       "      <td>Asco</td>\n",
-       "      <td>Decepción</td>\n",
-       "      <td>Otra</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Este es el Presidente que nos merecemos, recorrió el país entero, escuchó, expresó cariño y nos contagió la esperanza #FedericoEsColombia</td>\n",
-       "      <td>1528336411451133955</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>{\"choices\": [\"Admiración\", \"Confianza\"]}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>494</th>\n",
-       "      <td>Gustavo Petro y Francia Márquez hoy es el día , #ElCambioEnPrimera está victoria no la Para nadie .#PetroPresidenteEnPrimera . #cambialahistoria .</td>\n",
-       "      <td>1530864273974513666</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>{\"choices\": [\"Admiración\", \"Confianza\"]}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>Ansioso por el cambio en primera es ahora! Por tus hijos, por los animales por el planeta y por vivir sabroso #PetroPresidenteEnPrimera</td>\n",
-       "      <td>1530880576055562245</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>{\"choices\": [\"Admiración\", \"Confianza\"]}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>@10jhonatan19 @EsConFajardo No luchan por ganar sino más bien para que no gané #PetroPresidenteEnPrimera .,... Pero no van a poder, los que queremos un cambio real somos más</td>\n",
-       "      <td>1530895917607436288</td>\n",
-       "      <td>Desagrado</td>\n",
-       "      <td>{\"choices\": [\"Desagrado\", \"Confianza\"]}</td>\n",
-       "      <td>{\"choices\": [\"Admiración\", \"Confianza\"]}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>Vamos por el cambio en primera,votemos por un mejor pais #PetroPresidenteEnPrimera</td>\n",
-       "      <td>1530895362671710209</td>\n",
-       "      <td>Agrado</td>\n",
-       "      <td>Confianza</td>\n",
-       "      <td>{\"choices\": [\"Admiración\", \"Confianza\"]}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>@FernanMartinez Ya perdiste Fernan. Tiene 4 años para hacer oposición, disfrútalos. #PetroPresidenteEnPrimera</td>\n",
-       "      <td>1530894671974653952</td>\n",
-       "      <td>Alegria</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>{\"choices\": [\"Admiración\", \"Confianza\"]}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>499 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                                                                                                                                                                                text  \\\n",
-       "0                                                                                                                 #NosUnimosONosJodemos #NosUnimosONosJodemos  Vamos juntos por el cambio, mire el miedo que le tienen.  @petrogustavo Mi presidente   \n",
-       "1    @tobonsanin Otra vez este viejo estúpido politiquero, estamos es llevados cuando creemos  viejo decrépito de estos va hacer la solución para Colombia, ayudando a escoger corruptos como #quintero en MEDELLIN #PetroElPatronDelMal #Federic...   \n",
-       "2                                                                                                      Sin importar encuestas como en el plebiscito juntos por Colombia el 29 nos vemos #FedericoImparable #NosUnimosONosJodemos #FedericoEsColombia   \n",
-       "3      @FranciaMarquezM Ahora q es a ud si le parece grave? Y cuando sus borregos de la primera linea lo hacian contra nuestros policias q? Chevere cuando es para otros pero grave cuando es hacia mi? 🤥 #PetroElPatronDelMal #NosUnimosONosJodemos   \n",
-       "4                                                                                                          Este es el Presidente que nos merecemos, recorrió el país entero, escuchó, expresó cariño y nos contagió la esperanza #FedericoEsColombia   \n",
-       "..                                                                                                                                                                                                                                               ...   \n",
-       "494                                                                                               Gustavo Petro y Francia Márquez hoy es el día , #ElCambioEnPrimera está victoria no la Para nadie .#PetroPresidenteEnPrimera . #cambialahistoria .   \n",
-       "495                                                                                                          Ansioso por el cambio en primera es ahora! Por tus hijos, por los animales por el planeta y por vivir sabroso #PetroPresidenteEnPrimera   \n",
-       "496                                                                    @10jhonatan19 @EsConFajardo No luchan por ganar sino más bien para que no gané #PetroPresidenteEnPrimera .,... Pero no van a poder, los que queremos un cambio real somos más   \n",
-       "497                                                                                                                                                               Vamos por el cambio en primera,votemos por un mejor pais #PetroPresidenteEnPrimera   \n",
-       "498                                                                                                                                    @FernanMartinez Ya perdiste Fernan. Tiene 4 años para hacer oposición, disfrútalos. #PetroPresidenteEnPrimera   \n",
-       "\n",
-       "                tweet_id              sentiment_juanjo  \\\n",
-       "0    1528216296147533824                     Confianza   \n",
-       "1    1528425111078019072  {\"choices\": [\"Ira\", \"Asco\"]}   \n",
-       "2    1528451337087762433                     Confianza   \n",
-       "3    1528454891634663428                          Asco   \n",
-       "4    1528336411451133955                     Confianza   \n",
-       "..                   ...                           ...   \n",
-       "494  1530864273974513666                     Confianza   \n",
-       "495  1530880576055562245                     Confianza   \n",
-       "496  1530895917607436288                     Desagrado   \n",
-       "497  1530895362671710209                        Agrado   \n",
-       "498  1530894671974653952                       Alegria   \n",
-       "\n",
-       "                            sentiment_juanma  \\\n",
-       "0                                  Confianza   \n",
-       "1                                       Asco   \n",
-       "2                                  Confianza   \n",
-       "3                                  Decepción   \n",
-       "4                                        NaN   \n",
-       "..                                       ...   \n",
-       "494                                Confianza   \n",
-       "495                                Confianza   \n",
-       "496  {\"choices\": [\"Desagrado\", \"Confianza\"]}   \n",
-       "497                                Confianza   \n",
-       "498                                      NaN   \n",
-       "\n",
-       "                                 sentiment_ger  \n",
-       "0                                   Admiración  \n",
-       "1    {\"choices\": [\"Ira\", \"Asco\", \"Desagrado\"]}  \n",
-       "2                                          NaN  \n",
-       "3                                         Otra  \n",
-       "4     {\"choices\": [\"Admiración\", \"Confianza\"]}  \n",
-       "..                                         ...  \n",
-       "494   {\"choices\": [\"Admiración\", \"Confianza\"]}  \n",
-       "495   {\"choices\": [\"Admiración\", \"Confianza\"]}  \n",
-       "496   {\"choices\": [\"Admiración\", \"Confianza\"]}  \n",
-       "497   {\"choices\": [\"Admiración\", \"Confianza\"]}  \n",
-       "498   {\"choices\": [\"Admiración\", \"Confianza\"]}  \n",
-       "\n",
-       "[499 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "a44e69a5-9a20-45c3-ad0f-37d3ea5e3a97",
    "metadata": {},
    "outputs": [],
@@ -268,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "2bc61df7-37a1-489d-b8a5-af2f6fe4fe43",
    "metadata": {},
    "outputs": [],
@@ -281,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "a66dbc25-dc76-489e-bde6-4392f56d5c81",
    "metadata": {},
    "outputs": [],
@@ -292,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "a27269a2-d96c-4496-8179-82f19d585716",
    "metadata": {},
    "outputs": [],
@@ -304,7 +114,69 @@
     "merged_df['labels_encoded'] = np.where(merged_df[list(dict_emociones.keys())] == 1, 1.0, 0.0).tolist()\n",
     "labeled_df = merged_df[['text', 'tweet_id', 'labels', 'labels_encoded']]\n",
     "labeled_df = labeled_df[labeled_df['labels'] != ''].reset_index(drop = True)\n",
-    "labeled_df.to_csv('../Data/Data_Annotated/test_labeled_dataset.csv', index = False)"
+    "#labeled_df.to_csv('../Data/Data_Annotated/test_labeled_dataset.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "37e8ec80-4047-47fa-b819-9f724e02aa39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alegria': 464,\n",
+       " 'miedo': 98,\n",
+       " 'sorpresa': 3,\n",
+       " 'tristeza': 103,\n",
+       " 'asco': 551,\n",
+       " 'ira': 85,\n",
+       " 'otra': 0}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emotions_count = {}\n",
+    "for i in dict_emociones.keys():\n",
+    "    emotions_count[i] =len(merged_df[merged_df[i] == True])\n",
+    "emotions_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b8e9678b-98fd-4914-8eb1-1fd3f9e64f83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alegria': 0.6867465382749224,\n",
+       " 'miedo': 0.465564640154313,\n",
+       " 'sorpresa': 0.2576893232735119,\n",
+       " 'tristeza': 0.39735183795949025,\n",
+       " 'asco': 0.573173968627103,\n",
+       " 'ira': 0.1724007816598313,\n",
+       " 'otra': -0.010109519797805012}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agreements = {}\n",
+    "for i in dict_emociones.keys():\n",
+    "    arr = np.array(merged_df[[i + '_juanjo',i + '_juanma', i + '_ger' ]])\n",
+    "    agg = irr.aggregate_raters(arr)\n",
+    "    agreements[i] = irr.fleiss_kappa(agg[0], method='fleiss')\n",
+    "agreements"
    ]
   },
   {
