agrego reducted dataset

--- a/Code/Annotations_aggregation.ipynb
+++ b/Code/Annotations_aggregation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "667d7ec7-96a6-429a-963e-663593961500",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "48f60347-b832-479a-8d68-ce44146ead6b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "c890b074-c201-4695-9f3b-b148fc204f38",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "a44e69a5-9a20-45c3-ad0f-37d3ea5e3a97",
    "metadata": {},
    "outputs": [],
@@ -69,16 +69,16 @@
     "dict_emociones = {\n",
     "    'alegria' : ['Alegria', 'Confianza', 'Admiración','Agrado'],\n",
     "    'miedo' : ['Miedo', 'Incertidumbre'],\n",
-    "    'sorpresa' : ['Sorpresa', 'Asombro'],\n",
+    "    #'sorpresa' : ['Sorpresa', 'Asombro'],\n",
     "    'tristeza' : ['Tristeza' , 'Decepción'],\n",
-    "    'asco' : ['Asco', 'Desagrado'],\n",
-    "    'ira' : ['Ira', 'Odio'],\n",
-    "    'otra' : ['Otra'] }"
+    "    'asco-ira' : ['Asco', 'Desagrado', 'Ira', 'Odio'],}\n",
+    "    #'ira' : [],\n",
+    "    #'otra' : ['Otra'] }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "2bc61df7-37a1-489d-b8a5-af2f6fe4fe43",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "a66dbc25-dc76-489e-bde6-4392f56d5c81",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "a27269a2-d96c-4496-8179-82f19d585716",
    "metadata": {},
    "outputs": [],
@@ -114,28 +114,177 @@
     "merged_df['labels_encoded'] = np.where(merged_df[list(dict_emociones.keys())] == 1, 1.0, 0.0).tolist()\n",
     "labeled_df = merged_df[['text', 'tweet_id', 'labels', 'labels_encoded']]\n",
     "labeled_df = labeled_df[labeled_df['labels'] != ''].reset_index(drop = True)\n",
-    "#labeled_df.to_csv('../Data/Data_Annotated/test_labeled_dataset.csv', index = False)"
+    "labeled_df.to_csv('../Data/Data_Annotated/test_labeled_dataset.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
+   "id": "5e3c194e-f43c-43ed-a7ed-87906e4a8637",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>labels_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>#NosUnimosONosJodemos #NosUnimosONosJodemos  Vamos juntos por el cambio, mire el miedo que le tienen.  @petrogustavo Mi presidente</td>\n",
+       "      <td>1528216296147533824</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>@tobonsanin Otra vez este viejo estúpido politiquero, estamos es llevados cuando creemos  viejo decrépito de estos va hacer la solución para Colombia, ayudando a escoger corruptos como #quintero en MEDELLIN #PetroElPatronDelMal #Federic...</td>\n",
+       "      <td>1528425111078019072</td>\n",
+       "      <td>asco-ira</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 1.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sin importar encuestas como en el plebiscito juntos por Colombia el 29 nos vemos #FedericoImparable #NosUnimosONosJodemos #FedericoEsColombia</td>\n",
+       "      <td>1528451337087762433</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Este es el Presidente que nos merecemos, recorrió el país entero, escuchó, expresó cariño y nos contagió la esperanza #FedericoEsColombia</td>\n",
+       "      <td>1528336411451133955</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Por mi familia, por la democracia y las libertades. #FedericoEsColombia</td>\n",
+       "      <td>1528335860470620160</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1071</th>\n",
+       "      <td>#EsMuyImportante terminar esas condecoraciones chimbas que se hacen entre los congresistas, dejar de malgastar medallas de oro para gente mediocre, inútil, buenos para nada.</td>\n",
+       "      <td>1539730888015085568</td>\n",
+       "      <td>asco-ira</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 1.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1072</th>\n",
+       "      <td>Nuestra Vice Francia Márquez lleva dos días peinando a todos los entrevistadores mala leche de los noticieros. #PetroBastaYa</td>\n",
+       "      <td>1539448627122393089</td>\n",
+       "      <td>alegria, asco-ira</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 1.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1073</th>\n",
+       "      <td>Que tal si bloqueamos a los Uribistas???  Rodolfistas NO! Uribistas y antipetristas que ya uno se cansa de leer lo mismo XD   #PetroBastaYa</td>\n",
+       "      <td>1539701798629416960</td>\n",
+       "      <td>asco-ira</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 1.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074</th>\n",
+       "      <td>#LosImpuestosDePetro es la verdad que necesitamos para ubicar toda esa #GenteDeBien que saca sus capitales a paraísos fiscales. Urge hacer una reforma en la DIAN para perseguir evasores @gusgomez1701</td>\n",
+       "      <td>1539553615182004231</td>\n",
+       "      <td>asco-ira</td>\n",
+       "      <td>[0.0, 0.0, 0.0, 1.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1075</th>\n",
+       "      <td>#LosImpuestosDePetro  Colombia comienza a vivir sabroso.</td>\n",
+       "      <td>1539553224071512064</td>\n",
+       "      <td>alegria</td>\n",
+       "      <td>[1.0, 0.0, 0.0, 0.0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1076 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                                                                                 text  \\\n",
+       "0                                                                                                                  #NosUnimosONosJodemos #NosUnimosONosJodemos  Vamos juntos por el cambio, mire el miedo que le tienen.  @petrogustavo Mi presidente   \n",
+       "1     @tobonsanin Otra vez este viejo estúpido politiquero, estamos es llevados cuando creemos  viejo decrépito de estos va hacer la solución para Colombia, ayudando a escoger corruptos como #quintero en MEDELLIN #PetroElPatronDelMal #Federic...   \n",
+       "2                                                                                                       Sin importar encuestas como en el plebiscito juntos por Colombia el 29 nos vemos #FedericoImparable #NosUnimosONosJodemos #FedericoEsColombia   \n",
+       "3                                                                                                           Este es el Presidente que nos merecemos, recorrió el país entero, escuchó, expresó cariño y nos contagió la esperanza #FedericoEsColombia   \n",
+       "4                                                                                                                                                                             Por mi familia, por la democracia y las libertades. #FedericoEsColombia   \n",
+       "...                                                                                                                                                                                                                                               ...   \n",
+       "1071                                                                    #EsMuyImportante terminar esas condecoraciones chimbas que se hacen entre los congresistas, dejar de malgastar medallas de oro para gente mediocre, inútil, buenos para nada.   \n",
+       "1072                                                                                                                     Nuestra Vice Francia Márquez lleva dos días peinando a todos los entrevistadores mala leche de los noticieros. #PetroBastaYa   \n",
+       "1073                                                                                                      Que tal si bloqueamos a los Uribistas???  Rodolfistas NO! Uribistas y antipetristas que ya uno se cansa de leer lo mismo XD   #PetroBastaYa   \n",
+       "1074                                          #LosImpuestosDePetro es la verdad que necesitamos para ubicar toda esa #GenteDeBien que saca sus capitales a paraísos fiscales. Urge hacer una reforma en la DIAN para perseguir evasores @gusgomez1701   \n",
+       "1075                                                                                                                                                                                         #LosImpuestosDePetro  Colombia comienza a vivir sabroso.   \n",
+       "\n",
+       "                 tweet_id             labels        labels_encoded  \n",
+       "0     1528216296147533824            alegria  [1.0, 0.0, 0.0, 0.0]  \n",
+       "1     1528425111078019072           asco-ira  [0.0, 0.0, 0.0, 1.0]  \n",
+       "2     1528451337087762433            alegria  [1.0, 0.0, 0.0, 0.0]  \n",
+       "3     1528336411451133955            alegria  [1.0, 0.0, 0.0, 0.0]  \n",
+       "4     1528335860470620160            alegria  [1.0, 0.0, 0.0, 0.0]  \n",
+       "...                   ...                ...                   ...  \n",
+       "1071  1539730888015085568           asco-ira  [0.0, 0.0, 0.0, 1.0]  \n",
+       "1072  1539448627122393089  alegria, asco-ira  [1.0, 0.0, 0.0, 1.0]  \n",
+       "1073  1539701798629416960           asco-ira  [0.0, 0.0, 0.0, 1.0]  \n",
+       "1074  1539553615182004231           asco-ira  [0.0, 0.0, 0.0, 1.0]  \n",
+       "1075  1539553224071512064            alegria  [1.0, 0.0, 0.0, 0.0]  \n",
+       "\n",
+       "[1076 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labeled_df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "37e8ec80-4047-47fa-b819-9f724e02aa39",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'alegria': 464,\n",
-       " 'miedo': 98,\n",
-       " 'sorpresa': 3,\n",
-       " 'tristeza': 103,\n",
-       " 'asco': 551,\n",
-       " 'ira': 85,\n",
-       " 'otra': 0}"
+       "{'alegria': 464, 'miedo': 98, 'tristeza': 103, 'asco-ira': 580}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "b8e9678b-98fd-4914-8eb1-1fd3f9e64f83",
    "metadata": {},
    "outputs": [
@@ -165,7 +314,7 @@
        " 'otra': -0.010109519797805012}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "id": "f71ebb54-8d90-419b-ae47-7eb0918d666b",
    "metadata": {},
    "outputs": [],
