upload final dataset

--- a/Code/Annotations_aggregation.ipynb
+++ b/Code/Annotations_aggregation.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "id": "a27269a2-d96c-4496-8179-82f19d585716",
    "metadata": {},
    "outputs": [],
@@ -181,22 +181,22 @@
     "merged_df['labels_encoded'] = np.where(merged_df[list(dict_emociones.keys())] == 1, 1.0, 0.0).tolist()\n",
     "labeled_df = merged_df[['text', 'tweet_id', 'labels', 'labels_encoded']]\n",
     "labeled_df = labeled_df[labeled_df['labels'] != ''].reset_index(drop = True)\n",
-    "#labeled_df.to_csv('../Data/Data_Annotated/reducted_test_labeled_dataset.csv', index = False)"
+    "labeled_df.to_csv('../Data/Data_Annotated/reducted_test_labeled_dataset.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "37e8ec80-4047-47fa-b819-9f724e02aa39",
+   "execution_count": 60,
+   "id": "ef94c678-043f-443d-8969-bad7a731ec82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'alegria': 99, 'admiracion': 407, 'miedo': 98, 'tristeza': 103, 'asco': 580}"
+       "{'alegria': 464, 'miedo': 98, 'tristeza': 103, 'asco': 580}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,29 +210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef94c678-043f-443d-8969-bad7a731ec82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "id": "b8e9678b-98fd-4914-8eb1-1fd3f9e64f83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'alegria': 0.367378073720203,\n",
-       " 'admiracion': 0.5908395767359234,\n",
+       "{'alegria': 0.6867465382749224,\n",
        " 'miedo': 0.465564640154313,\n",
        " 'tristeza': 0.39735183795949025,\n",
        " 'asco': 0.6199361570009777}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "id": "f71ebb54-8d90-419b-ae47-7eb0918d666b",
    "metadata": {},
    "outputs": [],
