--- a/Document/report.tex
+++ b/Document/report.tex
@@ -40,6 +40,8 @@
 \usepackage{play}
 \usepackage{epsfig}
 \usepackage[position=t,singlelinecheck=off]{subfig}
+\usepackage{appendix}
+\usepackage{longtable}
 
 
 %\usepackage[grey,times]{quotchap}
@@ -101,6 +103,13 @@
 \input{Chapters/chapter1}
 \input{Chapters/chapter2}
 \input{Chapters/chapter3}
+\input{Chapters/chapter4}
+
+\newpage
+\input{Appendix/appendix1}
+
+
+
 
 % You can either break down your chapter into multiple tex files
 % or keep in one file and quickly move between sections and subsections using
